<resources>
    <string name="app_name">Portfolio</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="descInstagram">instagram</string>
    <string name="descEmail">email</string>
    <string name="contatoTitle">Entre em contato:</string>
    <string name="apresentacaoTitle">Apresentação:</string>
    <string name="apresentacaoDesc">Olá! me chamo Matheus Seleguin Rossete e sou estudante de engenharia da computação na Fundação Santo André.</string>
    <string name="dadosPessoaisTitle">Dados Pessoais:</string>
    <string name="dadosPessoaisDesc">• Data de nascimento: 28/07/2003\n• Gênero: Masculino\n• Deficiência: Não\n• Endereço: Rua José Dangelo, 343, Santo André, SP</string>
    <string name="fotoPerfilDesc">Perfil do candidato</string>
    <string name="experienciaAcademicaTitle">Experiência acadêmica:</string>
    <string name="exp1Desc">• Grau: Graduação\n• Status: Em andamento (término em 2026)\n• Curso: Engenharia da computação\n• Instituição: FSA - Fundação Santo André</string>
    <string name="certificadosTitle">Certificados:</string>
    <string name="certificado1SubTitle">Certificado 1:</string>
    <string name="exp1CertificadoDesc">• Tipo: Curso\n• Título: Lógica de programação (Alura)\n• Descrição: me aprofundei no entendimento de arrays, listas e javascript</string>
    <string name="idiomasTitle">Idiomas:</string>
    <string name="subtituloIdioma1">Idioma 1:</string>
    <string name="idioma1Desc">• Idioma: Inglês\n• Nível: Avançado</string>
    <string name="aluraIconDesc">Icone Alura</string>
    <string name="iconFsa">Icone FSA</string>
    <string name="botaoLinkedin">Botão Linkedin</string>
</resources>