<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sobre_mim.SobreMimFragment">

    <ImageView
        android:id="@+id/fotoPerfil"
        android:layout_width="wrap_content"
        android:contentDescription="@string/fotoPerfilDesc"
        android:layout_height="wrap_content"
        android:src="@drawable/porfile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="245dp"
        android:layout_height="34dp"
        android:layout_marginTop="10dp"
        android:text="@string/apresentacaoTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fotoPerfil"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/Apresentacao"
        android:layout_width="339dp"
        android:layout_height="98dp"
        android:layout_marginTop="10dp"
        android:backgroundTintMode="add"
        android:orientation="vertical"
        android:text="@string/apresentacaoDesc"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dadosPessoais"
        android:layout_width="225dp"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
        android:text="@string/dadosPessoaisTitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Apresentacao"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dadosPesoaisDesc"
        android:layout_width="339dp"
        android:layout_height="151dp"
        android:layout_marginTop="10dp"
        android:text="@string/dadosPessoaisDesc"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dadosPessoais"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>